# ats2-siphash

./: Makefile.am  Makefile.in  README  aclocal.m4  aminclude_static.am  ats2-siphash.pc.in  config.h.in  configure  configure.ac  siphash.pc.in  write-halfsiphash-implementations.awk  write-siphash-implementations.awk
lib/: Makefile.am  Makefile.in
m4/: gnulib-cache.m4  gnulib-comp.m4
siphash/: halfsiphash.h  key.h  siphash.h
siphash/CATS/: atomic.cats  key.cats  siphash.cats  spinlock.cats
siphash/DATS/: array_prf.dats  atomic.dats  halfsiphash.dats  halfsiphash_c.dats  initialize_once.dats  key.dats  key_c.dats  siphash.dats  siphash_c.dats  spinlock.dats
siphash/HATS/: halfsiphash.hats  siphash.hats
siphash/SATS/: array_prf.sats  atomic.sats  halfsiphash.sats  initialize_once.sats  key.sats  siphash.sats  spinlock.sats
tests/: test-halfsiphash-2-4-32-C.c.m4  test-halfsiphash-2-4-32-hats.dats.m4  test-halfsiphash-2-4-32.dats.m4  test-halfsiphash-2-4-64-C.c.m4  test-halfsiphash-2-4-64.dats.m4  test-halfsiphash-4-8-32-C.c.m4  test-halfsiphash-4-8-32-hats.dats.m4  test-halfsiphash-4-8-32.dats.m4  test-halfsiphash-4-8-64-C.c.m4  test-halfsiphash-4-8-64.dats.m4  test-key-C.c.m4  test-key.dats.m4  test-siphash-2-4-128-C.c.m4  test-siphash-2-4-128.dats.m4  test-siphash-2-4-64-C.c.m4  test-siphash-2-4-64-hats.dats.m4  test-siphash-2-4-64.dats.m4  test-siphash-4-8-128-C.c.m4  test-siphash-4-8-128.dats.m4  test-siphash-4-8-64-C.c.m4  test-siphash-4-8-64-hats.dats.m4  test-siphash-4-8-64.dats.m4  test_siphash.dats  test_siphash.dats.m4  vectors-4-8.dats  vectors-4-8.h  vectors.dats  vectors.sats
